Fix color contrast

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
   --wine-red-hover: #9f272a;
   --wine-red-active: #72090c;
   --davy: #290000;
-  --davy-light: #9f8d8d;
+  --davy-light: #615151;
   --highlight: #f7ce65;
   --highlight-active: #f7d376;
   --highlight-hover: 	#f8d887;
@@ -14,9 +14,9 @@
   --heaven: #fffebd;
   --heaven-light: #fffee9;
   --error-red: #ff9494;
-  --positive-green: #63883c;
-  --positive-green-hover: #85a267;
-  --positive-green-active: #425a28;
+  --positive-green: #435B29;
+  --positive-green-hover: #6c7f58;
+  --positive-green-active: #34461f;
   --small: 640px;
   --medium: 768px;
   --large: 1024px;
